--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: 1.0.2
   firebase_core: 2.14.0
   firebase_messaging: 14.6.3
+  flutter_local_notifications: 16.2.0
 
 dev_dependencies:
   flutter_test:
