--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   firebase_core: 2.14.0
   firebase_messaging: 14.6.3
   flutter_local_notifications: 16.2.0
+  http: 1.1.0
+  path_provider: 2.1.0
+
 
 dev_dependencies:
   flutter_test:
